<?xml version="1.0"?>
<package format="2">
	<name>principal_component_analysis_tracking</name>
	<version>1.0.0</version>
	<description>6 DoF tracking using PCA</description>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>depth_image_proc</depend>
	<depend>charuco_detector</depend>
	<depend>dynamic_robot_localization</depend>
	<depend>nodelet</depend>
	<depend>realsense2_camera</depend>
	<depend>rgbd_launch</depend>
	<depend>tf</depend>
</package>
